Fix scrollbar problem(sort of)

--- a/app/globals.css
+++ b/app/globals.css
@@ -155,4 +155,15 @@
   .focus-ring {
     @apply focus:outline-none focus-visible:border-orange-300 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 focus-visible:ring-offset-2 focus-visible:ring-offset-orange-300 rounded;
   }
+
+  .hide-scroll {
+    animation: hide-scroll 1.5s backwards;
+  }
+
+  @keyframes hide-scroll {
+    from, to { 
+      overflow: hidden!
+    }
+    
+  }
 }
